[metadata]
name = tekmpesa
version = 1.0.1
description = All Mpesa APIs for All 8 Countries
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/TralahM/tekmpesa
author = Tralah M Brian
author_email = musyoki.brian@tralahtek.com
license = GPLV3
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

project_urls =
    Source = https://github.com/TralahM/tekmpesa
    Tracker = https://github.com/TralahM/tekmpesa/issues
    Documentation = https://github.com/TralahM/tekmpesa

[options]
include_package_data = true
packages = find:
install_requires =

    requests

    urllib3

    pycryptodome

    certifi

    chardet

    idna

    six

    pytest

    future

    jinja2

    lxml

    PyYaml
    xmltodict

[options.extras_require]
docs=
    sphinx
    sphinx-automodapi
[options.entry_points]
console_scripts =

